public/css/index.css
/* ... */
@media screen and (min-width: 900px) {
	section.hero,
	.about-page,
	.postlist-container {
		display:grid;
		grid-template-columns: repeat(3, 1fr);
	}
	.about-page section.bio-details {
		display: block;
	}
	section.hero h2,
	article h2.post-deck,
	.about-page section.bio,
	.postlist-container .postlist {
		grid-column: 1 / 3;
	}
	section.hero h2,
	article h2.post-deck {
		/* font-size: var(--font-size-lg); */
	}
	section.hero .hero-details,
	.about-page section.bio-details,
	.postlist-container .post-counter {
		grid-column: 3 / 4;
	}
	.image-thumbnail-grid {
		grid-template-columns: repeat(4, 1fr);
	}
}
@media screen and (min-width: 1600px) {
	.postlist-container {
		display:grid;
		grid-template-columns: repeat(8, 1fr);
		gap: 2rem;
	}
	.postlist-container .postlist {
		grid-column: 1 / 6;
	}
	.postlist-container .post-counter{
		grid-column: 6 / 9;
	}
	section.hero,
	.about-page {
		display: grid;
		grid-template-columns: repeat(8, 1fr);
	}
	
	.about-page section.bio,
	.postlist-container .postlist {
		grid-column: 1 / 6;
	}
	section.hero h2 {
		grid-column: 1 / 6;
	}
	section.hero h2,
	article h2.post-deck {
		font-size: var(--font-size-xl);
	}
	section.hero .hero-details,
	.about-page section.bio-details,
	.postlist-container .post-counter {
		grid-column: 6 / 9;
	}
	.image-thumbnail-grid {
		grid-template-columns: repeat(5, 1fr);
	}
	.image-gallery-grid {
		grid-template-columns: repeat(2, 1fr);
	}
}

section.bio .container-center {
	display: flex;
	justify-content: center;
	margin-bottom: 2rem;
}

section.bio img {
	width: 16rem;
	height: auto;
	border-radius: 500px;
}

.featured-post-grid,
section.archive {
	margin-bottom: 2rem;
}

.featured-post-grid ol.postlist {
	display: flex;
	overflow: scroll;
	scroll-snap-type: x mandatory;	
	-webkit-overflow-scrolling: touch;
	overflow-x: scroll;
	margin-inline-start: -1rem;
}

.featured-post-grid ol li.postlist-item {
	min-width: 80vw;
	scroll-snap-align: start;
}

.featured-post-grid ol li.postlist-item:last-child {
	margin-inline-end: -1rem;
}

.featured-post-grid ol li.postlist-item {
	padding-inline-start: 1rem;
}

@media screen and (min-width: 650px) {
	.featured-post-grid ol.postlist {
		display: grid;
		gap: 2rem;
		grid-template-columns: 1fr;
	}
	
	.featured-post-grid ol.postlist,
	.grid {
	  grid-template-columns: repeat(2, 1fr);
	}
	.featured-post-grid ol li.postlist-item {
		min-width: auto;
		scroll-snap-align: none;
	}
}
@media screen and (min-width: 900px) {
	.featured-post-grid ol.postlist,
	.grid {
	  grid-template-columns: repeat(3, 1fr);
	}
}
@media screen and (min-width: 1600px) {
	.featured-post-grid ol.postlist,
	.grid {
	  grid-template-columns: repeat(4, 1fr);
	}
}

section.cv {
	max-width: 65ch;
}

div.nextprev {
	border-top: 1px solid var(--subtle-border);
	margin-top: 2rem;
}

.links-nextprev {
	list-style: none;
	/* border-top: 1px dashed var(--color-gray-20); */
	padding: 1em 0;
	margin-top: 2rem;
	display: flex;
	gap: 1rem;
	flex-direction: row;
	justify-content: space-between;
}
.links-nextprev li {
	display: flex;
	flex: 1;
	flex-direction: column;
	max-width: 12rem;
}

.thumbnail-nextprev {
	aspect-ratio: 16 / 9;
    object-fit: cover;
	border-radius: var(--border-radius);
	width: 100%;
    height: auto;
}

/* Table Styles */

table {
	margin: 1em 0;
	border-spacing: 0.5rem;
	border-collapse: collapse;
	width: 100%;
	Font-size: smaller;
}

table td,
table th {
	padding-right: 1em;
	padding-block: 2.2rem;
	border-bottom: 1px solid var(--color-midnight-60);
	text-align: left;
}

table th {
	border-bottom: none;
	padding-block-end: 0px;
}

pre,
code {
	font-family: var(--font-family-monospace);
	border-radius: 4px;
    padding: 3px 6px;
	white-space: nowrap;
    background-color: var(--color-midnight-20);
    transition: color 0.25s, background-color 0.5s;
}
pre:not([class*="language-"]) {
	margin: .5em 0;
	line-height: 1.375; /* 22px /16 */
	-moz-tab-size: var(--syntax-tab-size);
	-o-tab-size: var(--syntax-tab-size);
	tab-size: var(--syntax-tab-size);
	-webkit-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;
	direction: ltr;
	text-align: left;
	white-space: pre;
	word-spacing: normal;
	word-break: normal;
}
code {
	word-break: break-all;
}

/* Header and footer styles */
header {
	flex-wrap: wrap;
	padding: .2rem 0 2rem;
}

@media screen and (min-width: 650px) {
	header {
		padding: 2rem 0;
	}
}

header,
footer .footer-container {
	max-width: 80em;
    margin: auto;
	display: flex;
	justify-content: space-between;
	gap: 1em .5em;
	align-items: center;
}
footer .footer-container {
	align-items: flex-start;
	flex-direction: column;
	border-top: 1px solid var(--subtle-border);
	padding: 4rem 0;
}
footer .footer-container ul {
	list-style: none;
	margin: 0;
	padding: 0;
}
footer .footer-container ul li {
	margin-bottom: .8rem;
}
footer .footer-links {
	display: flex;
	gap: 4rem;
}
.license {
	font-size: smaller;
	max-width: 48ch;
}
.home-link {
	font-size: 1em; /* 16px /16 */
	font-weight: 700;
	margin-right: 2em;
}
.home-link:link:not(:hover) {
	text-decoration: none;
}

@media screen and (min-width: 650px) {
	span.view-mode:before {
		content: "👋 Internet Traveler";
	}
	footer .footer-container {
		flex-direction: row;
		justify-content: space-between;
	}
	footer .footer-links {
		gap: 8rem;
	}
}

@media (prefers-color-scheme: dark) {
	@media screen and (min-width: 650px) {
		span.view-mode:before {
			content: "😎 We both love darkness";
		}
	}
}

/* Nav */
.nav {
	display: flex;
	gap: 1.6rem;
	padding: 0;
	margin: 0;
	list-style: none;
}
.nav-item {
	display: inline-block;
	margin-right: 1em;
	margin-bottom: 0px;
}
.nav-item a[href]:not(:hover) {
	text-decoration: none;
}
.nav a[href][aria-current="page"] {
	text-decoration: underline;
}

/* Posts list */
.postlist {
	list-style: none;
	/* border-bottom: 1px solid var(--color-midnight-60); */
	padding: 0;
	/* padding-left: 1.5rem; */
}
/* ... */

